--- a/app/src/App.css
+++ b/app/src/App.css
@@ -25,3 +25,10 @@ h1 {
   height: 100px;
   margin-bottom: 50px;
 }
+
+@media only screen and (max-width: 600px) {
+  .logo {
+    height: 80px;
+    margin-bottom: 50;
+  }
+}
