--- a/app/src/components/game/Game.css
+++ b/app/src/components/game/Game.css
@@ -108,3 +108,23 @@
 .score-box {
   margin: 20px;
 }
+
+@media only screen and (max-width: 600px) {
+  .greenCircle,
+  .blueCircle,
+  .blackCircle,
+  .whiteCircle,
+  .redCircle,
+  .yellowCircle {
+    height: 37px;
+    width: 37px;
+  }
+  .gameCell, .dropCell {
+    height: 47px;
+    width: 47px;
+  }
+  .board-base {
+    height: 10px;
+    width: 400px;
+  }
+}
