--- a/app/src/App.css
+++ b/app/src/App.css
@@ -29,6 +29,6 @@ h1 {
 @media only screen and (max-width: 600px) {
   .logo {
     height: 80px;
-    margin-bottom: 50;
+    margin-bottom: 20px;
   }
 }
